turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
				c=0
                                  ^